added dummy changed line

--- a/scb_data_ex.ipynb
+++ b/scb_data_ex.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "# import modules for data analytics and plotting\n",
+    "# dummy changed line to illustrate git features\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
