--- a/jeff_example.ipynb
+++ b/jeff_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "import requests "
+    "import requests \n",
+    "\n",
+    "sns.set()"
    ]
   },
   {
