--- a/jeff_example.ipynb
+++ b/jeff_example.ipynb
@@ -10,7 +10,9 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
-    "import requests "
+    "import requests \n",
+    "\n",
+    "sns.set()"
    ]
   },
   {
@@ -19,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://api.scb.se/OV0104/v1/doris/sv/ssd/START/BE/BE0101/BE0101G/ManadFoddDod'\n",
+    "url_dead = 'http://api.scb.se/OV0104/v1/doris/sv/ssd/START/BE/BE0101/BE0101G/ManadFoddDod'\n",
     "\n",
-    "json_query = {\n",
+    "json_query_dead = {\n",
     "  \"query\": [\n",
     "    {\n",
     "      \"code\": \"Kon\",\n",
@@ -76,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.post(url,json=json_query)"
+    "r_dead = requests.post(url_dead,json=json_query_dead)"
    ]
   },
   {
@@ -85,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r.status_code"
+    "r_dead.status_code"
    ]
   },
   {
@@ -94,8 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json = r.json()\n",
-    "json['data'][0]"
+    "json_dead = r_dead.json()\n",
+    "json_dead['data'][0]"
    ]
   },
   {
@@ -104,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nr_rec = len(json['data'])\n",
+    "nr_rec = len(json_dead['data'])\n",
     "nr_rec"
    ]
   },
@@ -114,11 +116,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_list = []\n",
+    "data_list_dead = []\n",
     "\n",
-    "for rec in range(len(json['data'])):\n",
-    "    data_list.append([json['data'][rec]['key'][0],json['data'][rec]['key'][1],\n",
-    "                    json['data'][rec]['key'][2],json['data'][rec]['values'][0]])\n",
+    "for rec in range(len(json_dead['data'])):\n",
+    "    data_list_dead.append([json_dead['data'][rec]['key'][0],json_dead['data'][rec]['key'][1],\n",
+    "                    json_dead['data'][rec]['key'][2],json_dead['data'][rec]['values'][0]])\n",
     "    "
    ]
   },
@@ -128,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_list"
+    "data_list_dead"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data_list,columns = ['gender','month','year','dead'])"
+    "df_dead = pd.DataFrame(data_list_dead,columns = ['gender','month','year','dead'])"
    ]
   },
   {
@@ -146,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df_dead"
    ]
   },
   {
@@ -155,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.info()"
+    "df_dead.info()"
    ]
   },
   {
@@ -164,8 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['dead'] = df['dead'].astype(int)\n",
-    "df"
+    "df_dead['dead'] = df_dead['dead'].astype(int)\n",
+    "df_dead"
    ]
   },
   {
@@ -181,8 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_total = df.groupby(['year']).sum()\n",
-    "year_total"
+    "year_total_dead = df_dead.groupby(['year']).sum()\n",
+    "year_total_dead.index = pd.DatetimeIndex(year_total_dead.index).year\n",
+    "year_total_dead"
    ]
   },
   {
@@ -191,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_total.plot()"
+    "year_total_dead.info()"
    ]
   },
   {
@@ -200,9 +203,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_url = 'http://api.scb.se/OV0104/v1/doris/sv/ssd/START/BE/BE0101/BE0101A/BefolkningR1860'\n",
+    "year_total_dead.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_pop = 'http://api.scb.se/OV0104/v1/doris/sv/ssd/START/BE/BE0101/BE0101A/BefolkningR1860'\n",
     "\n",
-    "pop_json_query = {\n",
+    "json_query_pop = {\n",
     "  \"query\": [\n",
     "    {\n",
     "      \"code\": \"Alder\",\n",
@@ -236,8 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.post(pop_url,json = pop_json_query)\n",
-    "r.status_code"
+    "r_pop = requests.post(url_pop,json = json_query_pop)\n",
+    "r_pop.status_code"
    ]
   },
   {
@@ -245,7 +257,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "json_pop = r_pop.json()\n",
+    "json_pop['data'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_list_pop = []\n",
+    "\n",
+    "for rec in range(len(json_pop['data'])):\n",
+    "    data_list_pop.append([json_pop['data'][rec]['key'][1],\n",
+    "                         json_pop['data'][rec]['key'][2],\n",
+    "                         json_pop['data'][rec]['values'][0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pop = pd.DataFrame(data_list_pop,columns=['gender','year','pop'])\n",
+    "df_pop['pop'] = df_pop['pop'].astype(int)\n",
+    "df_pop['year'] = df_pop['year'].astype(int)\n",
+    "df_pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_total_pop = df_pop.groupby('year').sum()\n",
+    "year_total_pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mortality = year_total_dead['dead'] / year_total_pop['pop']\n",
+    "mortality.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mortality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mortality.plot()"
+   ]
   }
  ],
  "metadata": {
