--- a/jeff_example.ipynb
+++ b/jeff_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +324,40 @@
    "outputs": [],
    "source": [
     "mortality.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative way to parse json data without explicit processing of each record\n",
+    "\n",
+    "foo = pd.DataFrame.from_dict(r_pop.json()['data'])\n",
+    "foo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_data = pd.DataFrame(foo['key'].to_list(),columns=['region','gender','year'])\n",
+    "pop_data['pop'] = foo['values'].apply(lambda x : x[0]).astype(int)\n",
+    "\n",
+    "pop_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearly_population = pop_data.groupby('year').sum()\n",
+    "yearly_population"
    ]
   }
  ],
